# homecontrol-old

./: .gitignore  404.html  NOTES.txt  aircon-example.json  api-example.json  client-example.json  database-example.json  hue-example.json  hue.json  index.html  pyproject.toml  requirements.txt  scheduler.json  setup.py  sitemap.xml
docs/: mkdocs.yml
docs/docs/: index.md  setup.md
homecontrol/: __init__.py  config.py  exceptions.py  helpers.py  session.py
homecontrol/aircon/: aircon.py  config.py  exceptions.py  manager.py  structs.py
homecontrol/api/: aircon.py  auth.py  broadlink.py  config.py  consts.py  data_utils.py  database.py  exceptions.py  filters.py  helpers.py  home.py  hue.py  info.py  main.py  monitoring.py  structs.py
homecontrol/api/aircon/: aircon.py  state.py
homecontrol/api/authentication/: encryption.py  helpers.py  structs.py  user.py  user_manager.py
homecontrol/api/database/: aircon.py  client.py  connection.py  exceptions.py  rooms.py  users.py
homecontrol/broadlink/: __init__.py  config.py  device.py  manager.py  structs.py
homecontrol/client/: aircon.py  auth.py  client.py  config.py  connection.py  exceptions.py  helpers.py  home.py  hue.py  info.py  monitoring.py  session.py  structs.py
homecontrol/database/: connection.py  database.py
homecontrol/database/mysql/: client.py  config.py  connection.py  structs.py
homecontrol/database/sqlite/: connection.py  (+1 more)
homecontrol/hue/: api.py  bridge_structs.py  color.py  config.py  connection.py  exceptions.py  grouped_light.py  helpers.py  hue.py  light.py  manager.py  room.py  scene.py  session.py  structs.py
homecontrol/management/: main.py
homecontrol/scheduling/: config.py  scheduler.py  structs.py
scripts/: add_user.py  deploy.py  get_monitoring.py  init_db.py
search/: search_index.json
setup/: index.html
(+9 files in other folders)
