[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name="homecontrol"
dynamic = ["version"]
authors=[{name="2851999", email="2851999@users.noreply.github.com"}]
description="A library and flask API for controlling home appliances"
license={text="Apache License 2.0"}
urls={source="https://github.com/2851999"}
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]
dependencies=[
    "flask",
    "flask-cors",
    "msmart",
    # Phillips Hue bridge has a cert without subjectAltName
    "urllib3<2",
    "requests-toolbelt",
    "APScheduler",
    "mysql-connector-python",
    "bcrypt",
    "pyjwt",
    "broadlink"
]

[project.scripts]
homecontrol-management = "homecontrol.management.main:main"
homecontrol-scheduler = "homecontrol.scheduling.scheduler:main"

[tool.setuptools.dynamic]
version = {attr = "homecontrol.__version__"}